k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beer-darts
  labels:
    app.kubernetes.io/name: beer-darts
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: beer-darts
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
